Rework Encounter creator view model

--- a/app/src/main/res/layout/activity_encounter_creator.xml
+++ b/app/src/main/res/layout/activity_encounter_creator.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,6 +8,7 @@
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar_layout"
+        app:layout_constraintTop_toTopOf="parent"
         style="@style/Widget.MaterialComponents.AppBarLayout.Primary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,7 +21,7 @@
             app:layout_scrollFlags="scroll|enterAlways"
             app:title="@string/fragment_encounter_creator"
             app:menu="@menu/main_menu"
-            app:titleTextColor="@color/primaryTextColor"></com.google.android.material.appbar.MaterialToolbar>
+            app:titleTextColor="@color/primaryTextColor" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -28,202 +29,90 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/encounter_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
+        app:layout_constraintBottom_toTopOf="@id/filter_bottom_sheet"
         android:clipToPadding="false"
         android:orientation="vertical"
         android:paddingBottom="8dp"
-        android:layout_marginBottom="@dimen/bottom_sheet_peek"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
         tools:itemCount="5"
         tools:listitem="@layout/viewholder_monster" />
 
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/filter_fab"
+        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
+        android:src="@drawable/ic_filter_alt"
+        app:layout_constraintBottom_toTopOf="@+id/filter_bottom_sheet"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/filter_bottom_sheet"
-        style="@style/BottomSheet"
+        style="@style/FilterControl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
+        android:padding="4dp"
+        app:layout_constraintBottom_toBottomOf="parent">
 
-        <View
-            android:layout_width="54dp"
-            android:layout_height="1dp"
-            android:layout_marginTop="4dp"
-            android:background="@color/secondaryColor"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/search_edit_text_layout"
-            style="@style/EditText"
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/option_chips"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="14dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toStartOf="@+id/create_monster"
+            android:layout_marginEnd="8dp"
+            app:singleLine="true"
+            app:chipSpacingVertical="@dimen/verticalChipSpacing"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/search_edit_text"
-                android:layout_width="match_parent"
+            <de.enduni.monsterlair.common.view.filterchips.SearchChip
+                android:id="@+id/search_button"
+                style="@style/Widget.MaterialComponents.Chip.Action"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <de.enduni.monsterlair.common.view.filterchips.LevelRangeChip
+                android:id="@+id/level_button"
+                style="@style/Widget.MaterialComponents.Chip.Action"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <de.enduni.monsterlair.common.view.filterchips.SortByChip
+                android:id="@+id/sort_button"
+                style="@style/Widget.MaterialComponents.Chip.Action"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </com.google.android.material.chip.ChipGroup>
+
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scrollbars="none"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            app:layout_constraintTop_toBottomOf="@id/option_chips">
+
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/additional_filter_chips"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="@string/search" />
-        </com.google.android.material.textfield.TextInputLayout>
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                app:singleLine="true" />
 
-        <ImageView
-            android:id="@+id/create_monster"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:background="?selectableItemBackgroundBorderless"
-            android:clickable="true"
-            android:contentDescription="@string/custom_monster_create_title"
-            android:focusable="true"
-            android:padding="8dp"
-            android:src="@drawable/ic_add"
-            app:layout_constraintBottom_toBottomOf="@id/search_edit_text_layout"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/search_edit_text_layout" />
+        </HorizontalScrollView>
 
-        <TextView
-            android:id="@+id/level_slider_label"
-            style="@style/Caption"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:text="@string/level_range"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/search_edit_text_layout" />
-
-        <io.apptik.widget.MultiSlider
-            android:id="@+id/level_slider"
-            android:layout_width="0dp"
-            android:layout_height="24dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="16dp"
-            android:clickable="true"
-            android:focusable="true"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/level_slider_label"
-            app:scaleMax="25"
-            app:scaleMin="-1"
-            app:scaleStep="1"
-            app:thumbNumber="2" />
-
-        <com.google.android.material.checkbox.MaterialCheckBox
-            android:id="@+id/within_budget_checkbox"
-            style="@style/Widget.MaterialComponents.CompoundButton.CheckBox"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:layoutDirection="rtl"
-            android:text="@string/within_budget"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/level_slider" />
-
-
-        <TextView
-            android:id="@+id/danger_type_filter_label"
-            style="@style/Caption"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="@string/danger_filter_label"
-            app:layout_constraintStart_toStartOf="@id/level_slider_label"
-            app:layout_constraintTop_toBottomOf="@id/within_budget_checkbox" />
-
-
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/danger_type_chips"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            app:chipSpacingVertical="@dimen/verticalChipSpacing"
-            app:layout_constraintTop_toBottomOf="@id/danger_type_filter_label">
-
-        </com.google.android.material.chip.ChipGroup>
-
-        <TextView
-            android:id="@+id/type_filter_label"
-            style="@style/Caption"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="@string/label_filter_monster_types"
-            app:layout_constraintStart_toStartOf="@id/level_slider_label"
-            app:layout_constraintTop_toBottomOf="@id/danger_type_chips" />
-
-
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/monster_type_chips"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            app:chipSpacingVertical="@dimen/verticalChipSpacing"
-            app:layout_constraintTop_toBottomOf="@id/type_filter_label">
-
-        </com.google.android.material.chip.ChipGroup>
-
-        <TextView
-            android:id="@+id/complexity_filter_label"
-            style="@style/Caption"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="@string/hazard_complexity_encounter_creator"
-            app:layout_constraintStart_toStartOf="@id/level_slider_label"
-            app:layout_constraintTop_toBottomOf="@id/monster_type_chips" />
-
-
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/complexity_chips"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            app:chipSpacingVertical="@dimen/verticalChipSpacing"
-            app:layout_constraintTop_toBottomOf="@id/complexity_filter_label">
-
-        </com.google.android.material.chip.ChipGroup>
-
-        <TextView
-            android:id="@+id/sort_by_label"
-            style="@style/Caption"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="@string/sort_by"
-            app:layout_constraintStart_toStartOf="@id/level_slider_label"
-            app:layout_constraintTop_toBottomOf="@id/complexity_chips" />
-
-
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/sort_by_chips"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            app:chipSpacingVertical="@dimen/verticalChipSpacing"
-            app:layout_constraintTop_toBottomOf="@id/sort_by_label">
-
-        </com.google.android.material.chip.ChipGroup>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
