--- a/app/src/main/res/layout/activity_encounter_creator.xml
+++ b/app/src/main/res/layout/activity_encounter_creator.xml
@@ -53,66 +53,73 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <com.google.android.material.card.MaterialCardView
         android:id="@+id/filter_bottom_sheet"
-        style="@style/FilterControl"
+        style="@style/Widget.MaterialComponents.CardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="4dp"
         app:layout_constraintBottom_toBottomOf="parent">
 
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/option_chips"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            app:singleLine="true"
-            app:chipSpacingVertical="@dimen/verticalChipSpacing"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <de.enduni.monsterlair.common.view.filterchips.SearchChip
-                android:id="@+id/search_button"
-                style="@style/Widget.MaterialComponents.Chip.Action"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <de.enduni.monsterlair.common.view.filterchips.LevelRangeChip
-                android:id="@+id/level_button"
-                style="@style/Widget.MaterialComponents.Chip.Action"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <de.enduni.monsterlair.common.view.filterchips.SortByChip
-                android:id="@+id/sort_button"
-                style="@style/Widget.MaterialComponents.Chip.Action"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-        </com.google.android.material.chip.ChipGroup>
-
-        <HorizontalScrollView
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:scrollbars="none"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
-            app:layout_constraintTop_toBottomOf="@id/option_chips">
+            app:layout_constraintBottom_toBottomOf="parent">
 
             <com.google.android.material.chip.ChipGroup
-                android:id="@+id/additional_filter_chips"
-                android:layout_width="wrap_content"
+                android:id="@+id/option_chips"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
-                app:singleLine="true" />
+                app:chipSpacingVertical="@dimen/verticalChipSpacing"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-        </HorizontalScrollView>
+                <de.enduni.monsterlair.common.view.filterchips.SearchChip
+                    android:id="@+id/search_button"
+                    style="@style/Widget.MaterialComponents.Chip.Action"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <de.enduni.monsterlair.common.view.filterchips.LevelRangeChip
+                    android:id="@+id/level_button"
+                    style="@style/Widget.MaterialComponents.Chip.Action"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <de.enduni.monsterlair.common.view.filterchips.SortByChip
+                    android:id="@+id/sort_button"
+                    style="@style/Widget.MaterialComponents.Chip.Action"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </com.google.android.material.chip.ChipGroup>
+
+            <HorizontalScrollView
+                android:id="@+id/additional_filter_scroll_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="4dp"
+                android:paddingTop="4dp"
+                android:scrollbars="none"
+                app:layout_constraintTop_toBottomOf="@id/option_chips">
+
+                <com.google.android.material.chip.ChipGroup
+                    android:id="@+id/additional_filter_chips"
+                    android:layout_width="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_height="wrap_content"
+                    app:singleLine="true" />
+
+            </HorizontalScrollView>
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </com.google.android.material.card.MaterialCardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
