Add random treasure

--- a/app/src/main/res/layout/activity_encounter_creator.xml
+++ b/app/src/main/res/layout/activity_encounter_creator.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             app:layout_scrollFlags="scroll|enterAlways"
             app:title="@string/fragment_encounter_creator"
-            app:menu="@menu/main_menu"
+            app:menu="@menu/encounter_creator_menu"
             app:titleTextColor="@color/primaryTextColor" />
 
     </com.google.android.material.appbar.AppBarLayout>
@@ -46,8 +46,8 @@
         style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="@dimen/fab_margin"
+        android:layout_marginBottom="@dimen/fab_margin"
         android:src="@drawable/ic_filter_alt"
         app:layout_constraintBottom_toTopOf="@+id/filter_bottom_sheet"
         app:layout_constraintEnd_toEndOf="parent" />
