--- a/app/src/main/res/layout/dialog_encounter_creator_filter.xml
+++ b/app/src/main/res/layout/dialog_encounter_creator_filter.xml
@@ -236,7 +236,7 @@
 
     <Button
         android:id="@+id/close_button"
-        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        style="@style/OutlinedButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
