--- a/app/src/main/res/layout/dialog_treasure_filter.xml
+++ b/app/src/main/res/layout/dialog_treasure_filter.xml
@@ -5,6 +5,22 @@
     android:layout_height="match_parent"
     android:paddingBottom="16dp">
 
+    <TextView
+        android:id="@+id/headline"
+        app:layout_constraintTop_toTopOf="parent"
+        style="@style/ListItem"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusable="true"
+        android:gravity="center_vertical"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:paddingTop="16dp"
+        android:paddingBottom="8dp"
+        android:text="@string/additional_filters"
+        android:textColor="?colorOnSurface" />
+
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/treasure_categories_input_layout"
@@ -17,7 +33,7 @@
         android:layout_marginBottom="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/headline">
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/treasure_category_chips"
